--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "python-langchain-examples"
 version = "0.1.0"
 description = ""
-authors = ""
+authors = [""]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -10,6 +10,7 @@ python = "^3.12"
 openai = "^1.57.4"
 langchain = "^0.3.12"
 python-dotenv = "^1.0.1"
+langchain-community = "^0.3.12"
 
 
 [build-system]
