--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ openai = "^1.57.4"
 langchain = "^0.3.12"
 python-dotenv = "^1.0.1"
 langchain-community = "^0.3.12"
+chromadb = "^0.5.23"
 
 
 [build-system]
